--- a/skatteflukt.html
+++ b/skatteflukt.html
@@ -63,7 +63,7 @@
 
                 
                  <p class="ingress"> I prosessen jobbet vi sammen i innsiktsfasen, la fremdriftsplan, lagde skisser og prototype for utforming av spillet i Figma.
-                    Vi brukertestet spillet flere ganger i klassen, for å få tilbakemeldinger. </p>
+                    Vi brukertestet spillet flere ganger i klassen. </p>
 
                     <div class="line-height">
                     <img class="process-img-color2" src="images/skatteflukt/prosessbilde.png" alt="prosessbilde"></div>
