--- a/aftenposten.html
+++ b/aftenposten.html
@@ -14,7 +14,7 @@
     <section class="main-header backgroundcolor-beige"> 
     <!-- <section class="introduction"> -->
 <h1>Prosessen bak Aftenposten app</h1>
-<h2></h2>
+<h2>Digital prototyping og brukertesting</h2>
 </header>
 
 <main>
@@ -35,7 +35,7 @@
 
         <p class="bold">Prosessen</p>
     <ul class="a">
-        <li><a href="#section-1-link">Prosessen i Miro</a></li>
+        <li><a href="#section-1-link">Prosessen</a></li>
 
         <p class="line-heigt">Prototype App</p>
         <!-- <li><a href="#section-2-link">Designsystem - fargepalett</a></li>
@@ -58,13 +58,16 @@
     <!-- kort om prosessen/ oversiktsbilde-->
 
 
-   <p class="line-heigt">I innsiktsfasen jobbet vi med kvantativ og kvalitativ undersøkelser. 35 svar på spørreundersøkelsen og 6 dybde intervjuer.</p> 
+   <p class="line-heigt">I innsiktsfasen jobbet vi med kvantativ og kvalitativ undersøkelser. 35 svar på spørreundersøkelsen og 6 dybde intervjuer. Vi lagde tre personas, 
+       som var et utgangspunkt for videre fase for utforming av trådskisser og wireframes i Adobe XD.</p> 
     
    <div class="ingress">
 <p class="font-weight-300">"Mener nyhetsmediene ikke fokuserer på det som er vikitg for oss"(Kvinne, 24 år)</p>
-<p class="font-weight-300 line-height-top">Jeg ønsker en enklere måte å frem viktig informasjon. Ikke skjule og la det bli enkelt å oppdage"(Mann, 24år)</p></div>
+<p class="font-weight-300 line-height-top">"Jeg ønsker en enklere måte å frem viktig informasjon. Ikke skjule og la det bli enkelt å oppdage"(Mann, 24år)</p></div>
 
-<p class="ingress"></p> 
+<p class="ingress">Konseptet vårt, "Velg selv" er en app som skreddersyr sin egen nyhets-opplevelse. 
+    En kan selv velge hvilken nyhetsgategori som skal vises og hvilke medier som kan benyttes som
+    (story, podcast, lang/kort tekst eller video). En vil med nyhetsappen kunne tilpasse seg sine behov for hvordan en ønsker å få med seg nyheter på</p> 
 
 <img class="process-img"src="images/Aftenposten/Adobe-XD.png" alt="board-adobeXD">
 <img class="process-figma-img-kunstpluss2"src="images/Aftenposten/wireframes-aftenposten.png" alt="wireframes">
