--- a/aftenposten.html
+++ b/aftenposten.html
@@ -60,16 +60,19 @@
 
    <p class="line-heigt">I innsiktsfasen jobbet vi med kvantativ og kvalitativ undersøkelser. 35 svar på spørreundersøkelsen og 6 dybde intervjuer. Vi lagde tre personas, 
        som var et utgangspunkt for videre fase for utforming av trådskisser og wireframes i Adobe XD.</p> 
-    
+    <img class="process-img"src="images/Aftenposten/Adobe-XD.png" alt="board-adobeXD">
+
+    <p class="ingress">Konseptet vårt, "Velg selv" er en app som skreddersyr sin egen nyhets-opplevelse. 
+        En kan selv velge hvilken nyhetsgategori som skal vises og hvilke medier som kan benyttes som
+        (story, podcast, lang/kort tekst eller video). En vil med nyhetsappen kunne tilpasse seg sine behov for hvordan en ønsker å få med seg nyheter på.</p> 
    <div class="ingress">
 <p class="font-weight-300">"Mener nyhetsmediene ikke fokuserer på det som er vikitg for oss"(Kvinne, 24 år)</p>
 <p class="font-weight-300 line-height-top">"Jeg ønsker en enklere måte å frem viktig informasjon. Ikke skjule og la det bli enkelt å oppdage"(Mann, 24år)</p></div>
 
-<p class="ingress">Konseptet vårt, "Velg selv" er en app som skreddersyr sin egen nyhets-opplevelse. 
-    En kan selv velge hvilken nyhetsgategori som skal vises og hvilke medier som kan benyttes som
-    (story, podcast, lang/kort tekst eller video). En vil med nyhetsappen kunne tilpasse seg sine behov for hvordan en ønsker å få med seg nyheter på</p> 
+<p class="ingress">Noe som gikk igjen i kvalitativ og kvantative undersøkelsene, var et behov for å kunne lese mer postive nyheter. Disse sitaten er hentet fra spørreundersøkelsen.</p>
+<p class="font-weight-300 line-height"></p>"Mer gladnyheter!! Føler det eneste jeg leser om er triste/fæle ting..."</p>
+<p class="font-weight-300 line-height-top">"Gode nyheter. Noe å glede seg til"</p>
 
-<img class="process-img"src="images/Aftenposten/Adobe-XD.png" alt="board-adobeXD">
 <img class="process-figma-img-kunstpluss2"src="images/Aftenposten/wireframes-aftenposten.png" alt="wireframes">
 
 </section>
