--- a/aftenposten.html
+++ b/aftenposten.html
@@ -69,7 +69,7 @@
 <p class="font-weight-300">"Mener nyhetsmediene ikke fokuserer på det som er vikitg for oss"(Kvinne, 24 år)</p>
 <p class="font-weight-300 line-height-top">"Jeg ønsker en enklere måte å frem viktig informasjon. Ikke skjule og la det bli enkelt å oppdage"(Mann, 24år)</p></div>
 
-<p class="ingress">Noe som gikk igjen i kvalitativ og kvantative undersøkelsene, var et behov for å kunne lese mer postive nyheter. Disse sitaten er hentet fra spørreundersøkelsen.</p>
+<p class="ingress">Noe som gikk igjen i kvalitativ og kvantative undersøkelsene, var et behov for å kunne lese mer positive nyheter. Disse sitaten er hentet fra spørreundersøkelsen.</p>
 <p class="font-weight-300 line-height">"Mer gladnyheter!! Føler det eneste jeg leser om er triste/fæle ting..."</p>
 <p class="font-weight-300 line-height-top">"Gode nyheter. Noe å glede seg til"</p>
 
