test til bildene

--- a/kampanjenettside.html
+++ b/kampanjenettside.html
@@ -98,6 +98,8 @@ Vi jobbet etter dobbel diamond prosessen, der vi ofte gikk tilbake i prosessen n
 <section class="ingress" id="section-5-link">
     <h2>Digital markedsføring</h2>
 
+    <p class="ingress">Viser et utdrag fra en av annonsene, og et bilde fra analysen fra Hotjar.</p>
+
     <div class="ingress">
        <h3>Google Analytics</h3>
      
