--- a/kampanjenettside.html
+++ b/kampanjenettside.html
@@ -62,9 +62,7 @@
     Var i kontakt med UNICEF, der vi fikk bekreftet at de som støttet dem over tid er hovedsak over 35år og med overvekt av kvinner. De som er mest lojale givere er over 60 år. Dette ble grunnlaget for videre innsikt med dybde intervjuer. 
 
 <p class="ingress">Vi var bevisst i fremdriften vår, der vi la en fremdriftplan som var utgangspunktet for vårt prosjekt. 
-    Vi brukte Figma som vi dokumenterte alt av innsikt, inspirasjon fra konkurrenter og andre kampanjenettsider. Her lagde vi wireframes og prototypen.
-
-Vi jobbet etter dobbel diamond prosessen, der vi ofte gikk tilbake i prosessen når ny innsikt oppsto</p> 
+    Vi brukte Figma som vi dokumenterte alt av innsikt, inspirasjon fra konkurrenter og andre kampanjenettsider. Her lagde vi wireframes og prototypen. I designprossen jobbet vi etter "Double Diamond"- modellen, der vi ofte gikk tilbake i prosessen når ny innsikt oppsto.</p> 
 
 <img class="process-figma-img ingress" src="images/kampanjenettside/kampanjenettsiden-figma.png" alt="kampanjenettsiden-figma">
 
